--- a/life-cycle/CMakeLists.txt
+++ b/life-cycle/CMakeLists.txt
@@ -1,9 +1,18 @@
 cmake_minimum_required(VERSION 3.30)
 project(mean-FLAME)
-add_executable(mean-FLAME tevol_source_diff.cpp)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
-find_package(Boost REQUIRED COMPONENTS multi_array)
-SET(EXTERNAL_INCLUDES ${Boost_INCLUDE_DIRS})
-SET(EXTERNAL_LIBRARIES ${Boost_LIBRARY_DIRS})
-find_package(GSL)
+
+set(Boost_USE_STATIC_LIBS OFF) 
+set(Boost_USE_MULTITHREADED ON)  
+set(Boost_USE_STATIC_RUNTIME OFF) 
+find_package(Boost 1.85.0 COMPONENTS multi_array)
+find_package(GSL COMPONENTS gsl_errno gsl_odeiv)
+
+if(Boost_FOUND AND GSL_FOUND)
+    include_directories(${Boost_INCLUDE_DIRS})
+    include_directories(${GSL_INCLUDE_DIRS})
+    add_executable(mean-FLAME tevol_source_diff.cpp)
+    target_link_libraries(mean-FLAME ${Boost_LIBRARIES})
+    target_link_libraries(mean-FLAME ${GSL_LIBRARIES})
+endif()
