cleaned up the readme and some files

--- a/SIRS/CMakeLists.txt
+++ b/SIRS/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.30)
-project(life-cycle)
+project(SIRS)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
@@ -12,7 +12,7 @@ find_package(GSL COMPONENTS gsl_errno gsl_odeiv)
 if(Boost_FOUND AND GSL_FOUND)
     include_directories(${Boost_INCLUDE_DIRS})
     include_directories(${GSL_INCLUDE_DIRS})
-    add_executable(life-cycle tevol_source_diff.cpp)
-    target_link_libraries(life-cycle ${Boost_LIBRARIES})
-    target_link_libraries(life-cycle ${GSL_LIBRARIES})
+    add_executable(SIRS tevol_source_diff.cpp)
+    target_link_libraries(SIRS ${Boost_LIBRARIES})
+    target_link_libraries(SIRS ${GSL_LIBRARIES})
 endif()
