update cmake configs

--- a/life-cycle/CMakeLists.txt
+++ b/life-cycle/CMakeLists.txt
@@ -12,7 +12,7 @@ find_package(GSL COMPONENTS gsl_errno gsl_odeiv)
 if(Boost_FOUND AND GSL_FOUND)
     include_directories(${Boost_INCLUDE_DIRS})
     include_directories(${GSL_INCLUDE_DIRS})
-    add_executable(life-cycle tevol_source_diff.cpp)
+    add_executable(life-cycle run_life_cycle.cpp)
     target_link_libraries(life-cycle ${Boost_LIBRARIES})
     target_link_libraries(life-cycle ${GSL_LIBRARIES})
 endif()
