--- a/Lokta-Volterra/CMakeLists.txt
+++ b/Lokta-Volterra/CMakeLists.txt
@@ -12,7 +12,7 @@ find_package(GSL COMPONENTS gsl_errno gsl_odeiv)
 if(Boost_FOUND AND GSL_FOUND)
     include_directories(${Boost_INCLUDE_DIRS})
     include_directories(${GSL_INCLUDE_DIRS})
-    add_executable(lokta-volterra tevol_source_diff.cpp)
+    add_executable(lokta-volterra run_lokta_voltera.cpp)
     target_link_libraries(lokta-volterra ${Boost_LIBRARIES})
     target_link_libraries(lokta-volterra ${GSL_LIBRARIES})
 endif()
