--- a/SIRS/CMakeLists.txt
+++ b/SIRS/CMakeLists.txt
@@ -12,7 +12,7 @@ find_package(GSL COMPONENTS gsl_errno gsl_odeiv)
 if(Boost_FOUND AND GSL_FOUND)
     include_directories(${Boost_INCLUDE_DIRS})
     include_directories(${GSL_INCLUDE_DIRS})
-    add_executable(SIRS tevol_source_diff.cpp)
+    add_executable(SIRS run_SIRS.cpp)
     target_link_libraries(SIRS ${Boost_LIBRARIES})
     target_link_libraries(SIRS ${GSL_LIBRARIES})
 endif()
