fixed erroneous spelling

--- a/Lotka-Volterra/CMakeLists.txt
+++ b/Lotka-Volterra/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.30)
-project(lokta-volterra)
+project(lotka-volterra)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
@@ -12,7 +12,7 @@ find_package(GSL COMPONENTS gsl_errno gsl_odeiv)
 if(Boost_FOUND AND GSL_FOUND)
     include_directories(${Boost_INCLUDE_DIRS})
     include_directories(${GSL_INCLUDE_DIRS})
-    add_executable(lokta-volterra run_lokta_voltera.cpp)
-    target_link_libraries(lokta-volterra ${Boost_LIBRARIES})
-    target_link_libraries(lokta-volterra ${GSL_LIBRARIES})
+    add_executable(lotka-volterra run_lotka_voltera.cpp)
+    target_link_libraries(lotka-volterra ${Boost_LIBRARIES})
+    target_link_libraries(lotka-volterra ${GSL_LIBRARIES})
 endif()
